--- a/Adam Spiegel Portfolio Page.html
+++ b/Adam Spiegel Portfolio Page.html
@@ -2,19 +2,99 @@
 <html lang="en">
 
 <head>
-    <title>Adam Spiegel Portfolio</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link = href="style.css" rel="stylesheet"
+  <title>Adam Spiegel Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <body>
-        <header class="main-header">
-          <h1>Adam Spiegel Portfolio</h1>
-          <h2>A collection of web applications and projects</h2>
-        </header>
+
+  <header class="header">
+      <h1>Adam Spiegel Portfolio</h1>
+  </header>
+
+    <div class="links">
+        <a href="#About">About Me</a>
+        <a href="#Work">Work</a>
+        <a href="#Contact">Contact</a>
+    </div>
+
+  <img src="assets\Images\Uconn Logo.jpg" alt="Uconn Logo" style="width:250px;height:200px;" class="center">
+
+  <header class="main-header">
+    <h1>Uconn Coding Student Portfolio</h1>
+    <h2><i>A collection of coding development projects and applications</i></h2>
+
+  </header>
+
+  <main>
+    <section id="About">
+      <h2>About Me</h2>
+      <p>Include Bio & Resume Info Here</p>
+      <img src="assets\Images\Profile Photo.jpg" alt="Profile Photo" style="width: 300px;height: 300px; align-content: space-around;" class="center">
+    </section>
+
+    <section id="Work">
+      <h1>My Work</h1>
+    </section>
+    
+   <section id=card> 
+
+      <div class="card"> 
+      <header>Web Development Example</header>
+      <img src="assets/Images/laptop.jpg" alt="Laptop">
+      <p></p>
+      </div> 
+
+      <div class="card">
+        <header>Mobile Application</header>
+        <img src="assets/Images/iphone.jpg" alt="Iphone">
+        <p></p>
+      </div>
+  
+      <div class="card">
+        <header>Javascript Functionality Project</header>
+        <img src="assets/Images/Coding Wallpaper.jpg" alt="coding">
+        <p></p>
+      </div>
+  
+      <div class="card">
+        <header>Games</header>
+        <img src="assets/Images/dice.jpg" alt="dice">
+        <p></p>
+      </div>
+  
+      <div class="card">
+        <header>Business Productivity Application</header>
+        <img src="assets/Images/coffe cup.jpg" alt="coffee cup">
+        <p></p>
+      </div>
+  
+      <div class="card">
+        <header>Full Stack Development Project</header>
+        <img src="assets/Images/NYC.jpg" alt="new york city">
+        <p></p>
+      </div>
+
+    </section>
+
+  </main>
+  
+  <footer id="Contact">  
+
+    <b><u>Contact Information</u></b>
+    <p><b>Adam Spiegel</b></p>
+
+    <p><a href="mailto:AdamSpiegel23@gmail.com">Email</a></p>
+
+    <p><a href="https://github.com/AdamSpiegel">github</a></p>
+
+    <p><a href="https://www.linkedin.com/in/adam-spiegel-3086687">Linkedin</a></p>
+
+  </footer>
 
 </body>
+
 </html>
